--- a/templates/feedback/index.html
+++ b/templates/feedback/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class= "form-part">
-            <form action="/thanks" method="post">
+            <form action="/file-upload" method="post">
               {% csrf_token %}
               {% for field in form%}
                 <div class="form-group">
